Fixes last instance of vh causing problems on mobile.

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -710,6 +710,9 @@ section#sponsor {
         }
 
 				h2.subtitle {
+          line-height: 1.2em;
+          font-size: 1.4em;
+
 				  &.large {
 				  	display: none;
 				  }
